2015-02-22  Karl Berry  <karl@gnu.org>

	* info/Makefile.am (EXTRA_DIST): remove t/Cleanup.inc (gone).
	* README-hacking,
	* tp/README,
	* tp/tests/README,
	* tp/t/README: a few words about adding new tests.
	
	* tp/maintain/all_tests.sh,
	* tp/maintain/regenerate_cmd_tests.sh,
	* tp/maintain/prepare_perl_module_files.sh: copyright years.
	
	* tp/maintain/MANIFEST_generated_files,
	* tp/MANIFEST: regenerate.

2015-02-21  Eli Zaretskii  <eliz@gnu.org>

	* info/info-utils.c [__MINGW32__]: Undef wcwidth, to avoid its
	redirection from the MinGW-specific version in pcterm.c.

	* info/pcterm.c (wcwidth) [_WIN32] [!HAVE_WCWIDTH]: A replacement
	for wcwidth that works around the slow-down in the Gnulib version.

2015-02-21  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (info_move_to_prev_xref)
	(info_move_to_next_xref): Don't include skipped-over nodes in
	window history, and handle case of no xref being found.
	(cleanup_history): New function.
	* info/t/tab-no-xref.sh, info/t/tab-skip-node.sh: New tests.

2015-02-17  Karl Berry  <karl@gnu.org>

	* tp/Texinfo/Parser.pm (_parse_texi): do syntactic checks on @U
	argument here.
	* tp/Texinfo/Convert/HTML.pm (_convert_U_command): change accordingly.
	* tp/Texinfo/Convert/Plaintext.pm (_convert): change accordingly;
	also check if the Unicode character is valid before outputting it.
	
	* tp/tests/coverage_macro.texi,
	* tp/t/02coverage.t,
	* tp/t/05paragraph.t,
	* tp/t/plaintext_tests.t: test it.  (Re)generate results.
	
	* NEWS,
	* doc/refcard/txirefcard.tex,
	* doc/texinfo.texi (Inserting Unicode),
	(HTML Xref Command Expansion),
	(Command Summary): document it.

	* doc/refcard/txicmdcheck: report commands missing from the findex.
	
	* tp/tests/README: mention envvars for long_tests and tex_html_tests.
	* tp/t/README: (non-)copyright for tp/t, wording.

2015-02-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* INSTALL, README, README-alpha, TODO: 2015.